<resources>
    <string name="app_name">Issue Tracker</string>
    <string-array name="governorates_array">
        <item>Select Governorate </item>
        <item>Amman</item>
        <item>Zarqa</item>
        <item>Irbid</item>
        <item>Aqaba</item>
        <item>Balqa</item>
        <item>Madaba</item>
        <item>Mafraq</item>
        <item>Jerash</item>
        <item>Ajloun</item>
        <item>Karak</item>
        <item>Tafilah</item>
        <item>Maan</item>
    </string-array>
    
    <string-array name="competent_authority" >
        <item>select competent authority</item>
        <item name="Educatin">Ministry of Education</item>
        <item  name="Transportation">Ministry of Transportation</item>
        <item  name="Health">Ministry of Health</item>
        <item  name="Tourism">Ministry of Tourism</item>
        <item  name="Water">Ministry of Water and Irrigation</item>
        <item  name="Environment">Ministry of Environment</item>
        <item  name="Labor" >Ministry of Labor</item>
        <item  name="Communication_IT">Ministry of Communications and Information Technology</item>


    </string-array>

    <string-array name="IssueEducation">
        <item>Select issue type</item>
        <item>School infrastructure problems</item>
        <item>Complaints related to teaching staff</item>
        <item>Academic and educational problems</item>
        <item>Management-related complaints</item>
        <item>Safety complaints</item>
        <item>Parents complaints</item>
        <item>Other</item>

    </string-array>

    <string-array name="IssueTransportation">
        <item>Select issue type</item>
        <item>poor road conditions</item>
        <item>Public transportation delays or cancellations</item>
        <item>Unsafe public transportation</item>
        <item>Reckless or unlicensed drivers on public transportation</item>
        <item>inoperative traffic signals or signs</item>
        <item>Complaints about taxis or transportation services</item>
        <item>Lack of public transportation in some areas</item>item>
        <item>Lack of safe bicycle lanes</item>
        <item>Other</item>
    </string-array>

    <string-array name="IssueHealth">
        <item>Select issue type</item>
        <item>Medical services problems</item>
        <item>Lack of resources</item>
        <item>Infrastructure and sanitation problems</item>
        <item>organizational problems</item>
        <item>Emergency and Ambulance Problems</item>
        <item>Other</item>
    </string-array>

    <string-array name="IssueTourist">
        <item>Select issue type</item>
        <item>Poor tourist services</item>
        <item>Exploitation of tourists</item>
        <item>Neglect and maintenance of tourist sites</item>
        <item>Poor hygiene and public facilities</item>
        <item>Tourism license violations</item>
        <item>Lack of tourist guidance and counseling</item>
        <item>Tourist transportation problems</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="IssueWater">
        <item>Select issue type</item>
        <item>Water outage</item>
        <item>Water meter fault</item>
        <item>drinking water pollution</item>
        <item>Maintenance delay</item>
        <item>high water bill</item>
        <item>Water network leak</item>
        <item>broken water pipe</item>
        <item>Other</item>
    </string-array>

    <string-array name="IssueEnvironment">
        <item>Select issue type</item>
        <item>waste burning</item>
        <item>environmental pollution</item>
        <item>Cutting down trees and encroaching on forests</item>
        <item>Factory and facility violations</item>
        <item>construction and demolition waste</item>
        <item>Attack on nature reserves</item>
        <item>Other</item>
    </string-array>
    <string-array name="IssueLabor">
        <item>Select issue type</item>
        <item>Work without a contract</item>
        <item>Delayed or unpaid salaries</item>
        <item>discrimination in the workplace</item>
        <item>working in unsafe or unhealthy conditions</item>
        <item>Failure to register workers with social security</item>
        <item>arbitrary dismissal</item>
        <item>Other</item>
    </string-array>

    <string-array name="IssueCommunication">
        <item>Select issue type</item>
        <item>Internet outage or weakness</item>
        <item>Weak or non-existent network</item>
        <item>Problems with e-government services</item>
        <item>Electronic fraud or digital fraud attempts</item>
        <item>cybersecurity issues</item>
        <item>Other</item>
    </string-array>

    <!-- ... Activity_main page ... -->
    <string name="welcome">Welcome</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>

    <!-- ... login page ... -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_prompt">Don’t have an account? Sign Up</string>

    <string name="enter_email_password">Please enter the email and password fields</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_failed">Failed, incorrect password or email</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- ... signup page ... -->
    <string name="signup_title">Sign Up</string>
    <string name="full_name_hint">Full Name</string>

    <string name="phone_hint">Phone number</string>

    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">SIGN UP</string>
    <string name="login_prompt">Have an account? LOGIN</string>

    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="email_check">incorrect email</string>
    <string name="invalid_phone">Phone number is invalid</string>
    <string name="passwords_not_match">The passwords do not match</string>
    <string name="registration_success">Registration successful and data saved</string>
    <string name="data_failed">Data storage failed: %1$s</string>
    <string name="registration_failed">Registration failed: %1$s</string>

    <!-- ...home page ... -->
    <string name="home">Home</string>
    <string name="report_issue">REPORT ISSUE</string>
    <string name="view_reports_status">VIEW REPORTS STATUS</string>
    <!-- ...Report_issue page ... -->
        <string name="back_desc">arrow_back</string>
        <string name="report_issue_title">Report issue</string>
        <string name="select_date_hint">Select Date</string>
        <string name="write_title_label">Write a title for the topic</string>
        <string name="title_hint">Enter issue title .....</string>
        <string name="desc_label">Describe the issue</string>
        <string name="desc_hint">Write here .....</string>
        <string name="location_label">Determine the location:</string>
        <string name="map_desc">location</string>
        <string name="camera_desc">Photography possibility</string>
        <string name="submit_button">Submit Report</string>


    <string name="msg_select_governorate">Please select a governorate</string>
    <string name="msg_select_authority">Please select competent authority</string>
    <string name="msg_select_issue_type">Please select issue type</string>
    <string name="msg_select_date">Please select date</string>
    <string name="msg_write_title">Please write a title for the issue</string>
    <string name="msg_write_description">Please describe the issue</string>
    <string name="msg_select_location">Please select a location on the map</string>
    <string name="msg_report_success">Report submitted successfully!</string>
    <string name="msg_report_failed">Failed to submit report</string>

    <!-- ...status page ... -->
    <string name="status_title">Status</string>
    <string name="new_status">New</string>
    <string name="status_pending">Pending</string> <!-- بالعربي -->
    <string name="status_in_review">In Review </string>
    <string name="status_resolved">Resolved</string>
    <string name="status_rejected">Rejected</string>

    <string name="title_text">Title:</string>
    <string name="type_text">Issue Type:</string>
    <string name="Governorate_text">Governorate:</string>
    <string name="authority_text">Authority:</string>
    <string name="date_text">Date:</string>
    <string name="description_text">Description:</string>
    <string name="status_text">Status:</string>
    <string name="statusReason_text">StatusReason</string>

    <string name="btnBack_show_report">Back</string>


    <string name="change_pass_page">Change Password</string>
    <string name="code_confirm">Enter Code</string>
    <string name="submit">Submit</string>
<string name="enter_email">please enter the email correctly</string>
    <string name="enter_code">please enter the code correctly</string>
    <string name="ch_pass">please write password correctly</string>


    <string name="verify_email_first">Please verify your email before logging in.</string>
        <string name="reset_email_sent">A reset link has been sent to your email</string>
        <string name="reset_email_failed">Failed to send reset link. Check your email</string>

    <string name="data_load_failed">Failed to load data</string>

</resources>