<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="90dp"
        android:paddingBottom="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <ImageButton
            android:id="@+id/back_to_welcom"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:contentDescription="arrow_back"
            android:layoutDirection="ltr"
            app:srcCompat="@drawable/baseline_arrow_back_status" />

        <TextView
            android:id="@+id/ch_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/change_pass_page"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_log"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/editbox_background"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:gravity="start|center_vertical"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:paddingStart="16dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sub_code"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#02394F"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="12dp" />




    </LinearLayout>
</ScrollView>
